# terraform-reviewer

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Dockerfile  HUMAN-TODO.md  Makefile  NOTICE  PLAN.md  README.md  RELEASING.md  assessor-build-plan.md  docker-compose.yml  langgraph.json  pyproject.toml  release-please-config.json
.github/: dependabot.yml
.github/workflows/: build-image.yml  ci.yml  release-please.yml  terraform-review.yml
docs/: extension-points.md  langchain-ecosystem-opportunities.md  langchain-eval-integration-plan.md  rule-pack-curation.md
evals/: __init__.py  _env.py  _offline.py  evaluators.py  golden.py  langsmith_run.py  run.py  run_quality.py  target.py  trajectories.py
examples/: README.md  ci-baseline.json  example-caller.yml  terraform-house.json
schemas/: findings.schema.json
scripts/: smoke_test.sh
src/terraform_review_agent/: __init__.py  agent.py  config.py  dashboard_client.py  entrypoint.py  github_client.py  llm.py
src/terraform_review_agent/ai/: __init__.py  base.py  copilot_backend.py  langchain_backend.py
src/terraform_review_agent/rule_packs/: terraform-cis-aws.json
src/terraform_review_agent/standards_defs/: ci-baseline.json  gds-readiness.json  terraform-house.json
src/terraform_review_agent/utils/: diff.py  evidence_pack.py  findings_report.py  nodes.py  prompts.py  render.py  sarif_export.py  state.py  tools.py
src/terraform_review_agent/utils/lenses/: __init__.py  _annotate.py  base.py  cicd.py  cost.py  coverage.py  gds.py  registry.py  scanner.py  security.py  standards.py  style.py  tech_debt.py  terraform_standard.py
src/terraform_review_agent/utils/sources/: __init__.py  coverage.py  jscpd.py  sarif.py
src/terraform_review_agent/utils/standardisers/: __init__.py  cicd.py  gds.py  terraform.py
src/terraform_review_agent/utils/standards/: __init__.py  gaps.py  loader.py  mapping.py  pack.py
tests/integration/: test_evals_quality.py  test_evals_trajectory.py  test_graph_end_to_end.py
tests/unit/: test_agent_scaffold.py  test_ai.py  test_config.py  test_dashboard_client.py  test_diff.py  test_entrypoint.py  test_evidence_pack.py  test_findings_report.py  test_github_client.py  test_lenses.py  test_llm.py  test_nodes.py  test_registry.py  test_render.py  test_repo_lenses.py  test_sarif_export.py  test_sources_coverage.py  test_sources_ingestion.py  test_sources_sarif.py  test_standardisers.py  test_standards.py  test_state.py  test_tools.py
