[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "terraform-review-agent"
version = "1.0.0"
description = "LangGraph multi-agent reviewer for Terraform pull requests."
requires-python = ">=3.13,<3.14"
license = { text = "MIT" }
authors = [{ name = "spanosg131" }]
dependencies = [
    "langgraph>=0.2.50",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-anthropic>=0.2.0",
    "langchain-google-genai>=2.0.0",
    "pydantic>=2.8",
    "pydantic-settings>=2.4",
    "structlog>=24.4",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.6",
    "mypy>=1.11",
    "types-requests",
]
# Scanner installed into the container image (kept out of the default/dev
# install — local unit tests mock the checkov subprocess). Pinned here so the
# lockfile captures checkov *and its transitive tree*; the binary scanners
# (terraform/tfsec/tflint/infracost) stay pinned via Dockerfile ARGs.
container = [
    "checkov==3.2.529",
]

[tool.hatch.build.targets.wheel]
packages = ["src/terraform_review_agent"]

[tool.ruff]
line-length = 100
target-version = "py313"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]

[tool.mypy]
python_version = "3.13"
strict = true
files = ["src"]
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["langgraph.*", "langchain_core.*", "langchain_openai.*", "langchain_anthropic.*", "langchain_google_genai.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
