[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "terraform-review-agent"
version = "1.0.0"
description = "LangGraph multi-agent reviewer for Terraform pull requests."
requires-python = ">=3.13,<3.14"
license = { text = "AGPL-3.0-or-later" }
authors = [{ name = "ignatg" }]
dependencies = [
    "langgraph>=1.2.4",
    "langchain-core>=1.4",
    "langchain-openai>=1.2",
    "langchain-anthropic>=1.4",
    "langchain-google-genai>=4.2",
    "pydantic>=2.13",
    "pydantic-settings>=2.14",
    "structlog>=25.4",
    "httpx>=0.28",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0",
    "pytest-asyncio>=1.4",
    "ruff>=0.15",
    "mypy>=2.1",
    "types-requests",
    "types-pyyaml",
    "jsonschema>=4.26",
]
# Scanner installed into the container image (kept out of the default/dev
# install — local unit tests mock the checkov subprocess). Pinned here so the
# lockfile captures checkov *and its transitive tree*; the binary scanners
# (terraform/tfsec/tflint/infracost) stay pinned via Dockerfile ARGs.
container = [
    "checkov==3.2.532",
]

[tool.hatch.build.targets.wheel]
packages = ["src/terraform_review_agent"]

[tool.ruff]
line-length = 100
target-version = "py313"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]

[tool.mypy]
python_version = "3.13"
strict = true
files = ["src"]
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["langgraph.*", "langchain_core.*", "langchain_openai.*", "langchain_anthropic.*", "langchain_google_genai.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
