[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "terraform-review-agent"
version = "1.4.0"
description = "LangGraph multi-agent reviewer for Terraform pull requests."
requires-python = ">=3.14,<3.15"
license = { text = "AGPL-3.0-or-later" }
authors = [{ name = "ignatg" }]
dependencies = [
    "langgraph>=1.2",
    "langchain-core>=1.4",
    "langchain-openai>=1.2",
    "langchain-anthropic>=1.4",
    "langchain-google-genai>=4.2",
    "pydantic>=2.13",
    "pydantic-settings>=2.14",
    "structlog>=25.4",
    "httpx>=0.28",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0",
    "pytest-asyncio>=1.4",
    "ruff>=0.15",
    "mypy>=2.1",
    "types-requests",
    "types-pyyaml",
    "jsonschema>=4.26",
    # Pure-Python client for the optional Copilot backend; here so CI can import
    # it to exercise the backend's tests (the CLI it drives is bundled only in
    # the image — live behaviour stays a HUMAN-TODO verification step).
    "github-copilot-sdk>=1.0",
]
# Installed into the container image (kept out of the default install). Pinned so
# the lockfile captures the full transitive tree; the binary scanners + Copilot
# CLI stay pinned via Dockerfile ARGs.
#   * checkov — the Python security scanner.
#   * github-copilot-sdk — the Copilot backend's client (AI_BACKEND=copilot);
#     pure Python, but it drives the Copilot CLI the Dockerfile installs.
container = [
    "checkov==3.2.532",
    "github-copilot-sdk>=1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/terraform_review_agent"]

[tool.ruff]
line-length = 100
# Style floor stays at py313 even though we run on 3.14: targeting py314 makes the
# formatter rewrite `except (A, B):` to PEP 758's paren-free `except A, B:`, which
# reads like the removed Py2 `except E, name:` syntax. Conservative is clearer; the
# code runs unchanged on 3.14. (mypy's python_version tracks the real 3.14 runtime.)
target-version = "py313"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]

[tool.mypy]
python_version = "3.14"
strict = true
files = ["src"]
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["langgraph.*", "langchain_core.*", "langchain_openai.*", "langchain_anthropic.*", "langchain_google_genai.*", "copilot.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
